# FinSight-AI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/models/: credit_risk_v1.metrics.json
artifacts/reports/shap/: shap_values.npy
configs/: agent_config.yaml  model_config.yaml  rag_config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
notebooks/: 01_eda.py
scripts/: build_index.sh  download_data.py  run_api.sh  train_model.sh
src/agent/: agent.py  tools.py
src/api/: main.py  routes.py  schemas.py
src/llm_rag/: chunking.py  embeddings.py  generator.py  ingestion.py  reranker.py  retriever.py
src/traditional_ml/: data_pipeline.py  evaluate.py  feature_engineering.py  predict.py  train.py
src/utils/: config.py  logger.py  monitoring.py
static/: index.html
tests/: test_api.py  test_chunking.py  test_feature_engineering.py
